--- a/assets/style/style.css
+++ b/assets/style/style.css
@@ -44,6 +44,7 @@
 
 header{
     background-color: lightsalmon;
+    border-radius: 0 0 1.5rem 1.5rem;
 }
 body{
     background-color: rgba(240, 208, 150, 0.353);
